--- a/index.html
+++ b/index.html
@@ -295,14 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>生物在进化的时候总是会遵循一套规律</p>
-                <p>趋同进化</p>
-                <p>如果世间的一切都重新演化</p>
-                <p>那么所有的进化路线都是随机的</p>
-                <p>但终归会演化出类似的结果</p>
-                <p>这就是趋同进化</p>
-                <p>重来一次</p>
-                <p>我们还是会在一起</p>
+                <p>明日可爱的赵瑾小宝宝就要远行</p>
+                <p>希望她旅途顺利</p>
+                <p>美丽的空明yong（第二声）南</p>
+                <p>欢迎你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -328,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
