--- a/index.html
+++ b/index.html
@@ -295,10 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明日可爱的赵瑾小宝宝就要远行</p>
-                <p>希望她旅途顺利</p>
-                <p>美丽的空明yong（第二声）南</p>
-                <p>欢迎你</p>
+                <p>明天要考一门严格意义上正式的考试了</p>
+                <p>有点小紧张</p>
+                <p>小宝宝今天又是飞机又是火车又是坐车的</p>
+                <p>辛苦坏了</p>
+                <p>今晚一定要睡得香香呀</p>
+                <p>度假开启！</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
