--- a/index.html
+++ b/index.html
@@ -295,12 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天要考一门严格意义上正式的考试了</p>
-                <p>有点小紧张</p>
-                <p>小宝宝今天又是飞机又是火车又是坐车的</p>
-                <p>辛苦坏了</p>
-                <p>今晚一定要睡得香香呀</p>
-                <p>度假开启！</p>
+                <p>今天宝宝去大理玩了</p>
+                <p>看到了洱海</p>
+                <p>看到了海鸥</p>
+                <p>吃了米线</p>
+                <p>吃了小吃</p>
+                <p>虽然她对照片不满意</p>
+                <p>但毕竟不是我拍的</p>
+                <p>也是情有可原</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
