--- a/index.html
+++ b/index.html
@@ -295,14 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天宝宝去大理玩了</p>
-                <p>看到了洱海</p>
-                <p>看到了海鸥</p>
-                <p>吃了米线</p>
-                <p>吃了小吃</p>
-                <p>虽然她对照片不满意</p>
-                <p>但毕竟不是我拍的</p>
-                <p>也是情有可原</p>
+                <p>突然开始想念夏天</p>
+                <p>想念蝉鸣</p>
+                <p>想念夏天的味道</p>
+                <p>想念夏日炎炎</p>
+                <p>想念空调</p>
+                <p>想念和我们在一起的时光</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -328,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
