--- a/index.html
+++ b/index.html
@@ -295,12 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>突然开始想念夏天</p>
-                <p>想念蝉鸣</p>
-                <p>想念夏天的味道</p>
-                <p>想念夏日炎炎</p>
-                <p>想念空调</p>
-                <p>想念和我们在一起的时光</p>
+                <p>北京又下雪了</p>
+                <p>第二次见雪</p></p>
+                <p>这次下的是鹅毛大雪</p>
+                <p>雪花轻轻的落在身上</p>
+                <p>灯光下的飘雪</p>
+                <p>真想找个雪堆躺下</p>
+                <p>然后睡着</p>
+                <p>让大雪深埋</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
