--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>小火车呀摇啊摇</p>
-                <p>摇到了昆明</p></p>
-                <p>听说最近昆明的樱花开了</p>
-                <p>或许你可以去看看这冬天的樱花</p>
-                <p>我想一定会特别美</p>
-                <p>期待宝宝明天的美照</p>
+                <p>明天宝宝就回家啦</p>
+                <p>是不是好久没回去了</p>
+                <p>我们才分别半年</p>
+                <p>无法想象一年没回家是多久</p>
+                <p>回家吧~回家吧</p>
+                <p>回到最初的地方</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
