--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天宝宝就回家啦</p>
-                <p>是不是好久没回去了</p>
-                <p>我们才分别半年</p>
-                <p>无法想象一年没回家是多久</p>
-                <p>回家吧~回家吧</p>
-                <p>回到最初的地方</p>
+                <p>最近很忙</p>
+                <p>有很多会要开</p>
+                <p>有很多考试和汇报</p>
+                <p>还有很多相应的工作</p>
+                <p>但感觉一切都在正确的方向上</p>
+                <p>希望我们都能在正确的道路上前进着</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
