--- a/index.html
+++ b/index.html
@@ -295,12 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>最近很忙</p>
-                <p>有很多会要开</p>
-                <p>有很多考试和汇报</p>
-                <p>还有很多相应的工作</p>
-                <p>但感觉一切都在正确的方向上</p>
-                <p>希望我们都能在正确的道路上前进着</p>
+                <p>今天我们在一起八百五十五天了</p>
+                <p>今天没和宝宝视频</p>
+                <p>最近交流越来越少</p>
+                <p>我们还要在一起很久很久</p>
+                <p>平淡的日子</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
