--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天我们在一起八百五十五天了</p>
-                <p>今天没和宝宝视频</p>
-                <p>最近交流越来越少</p>
-                <p>我们还要在一起很久很久</p>
-                <p>平淡的日子</p>
+                <p>哎呀</p>
+                <p>真是开心</p>
+                <p>今天被丈母娘催婚了</p>
+                <p>优秀的学哥啊</p>
+                <p>嘻嘻</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
