--- a/index.html
+++ b/index.html
@@ -295,11 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>哎呀</p>
-                <p>真是开心</p>
-                <p>今天被丈母娘催婚了</p>
-                <p>优秀的学哥啊</p>
-                <p>嘻嘻</p>
+                <p>好困啊</p>
+                <p>凌晨三点了</p>
+                <p>我要睡觉了。。</p>
+                <p>真的好想你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
