--- a/index.html
+++ b/index.html
@@ -295,12 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和宝贝玩射击游戏</p>
-                <p>我要射仙人掌结果没射中</p>
-                <p>但我射中了一只🐥</p>
-                <p>然后我就得到他</p>
-                <p>但我原本就有一只🐥</p>
-                <p>去哪了呢</p>
+                <p>今天宝宝去聚会</p>
+                <p>吃饭唱歌</p>
+                <p>还把我照片泄露出去了</p>
+                <p>有点害羞</p>
+                <p>(✿◡‿◡)</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
