--- a/index.html
+++ b/index.html
@@ -295,11 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天宝宝去聚会</p>
-                <p>吃饭唱歌</p>
-                <p>还把我照片泄露出去了</p>
-                <p>有点害羞</p>
-                <p>(✿◡‿◡)</p>
+                <p>昨天偷懒了一天</p>
+                <p>我很想你</p>
+                <p>但我们交流越来越少了</p>
+                <p>都有些陌生了</p>
+                <p>我们再相见的时候肯定会好不习惯</p>
+                <p>只是我们何时再见呢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
