--- a/index.html
+++ b/index.html
@@ -295,12 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>昨天偷懒了一天</p>
-                <p>我很想你</p>
-                <p>但我们交流越来越少了</p>
-                <p>都有些陌生了</p>
-                <p>我们再相见的时候肯定会好不习惯</p>
-                <p>只是我们何时再见呢</p>
+                <p>今天好困好累</p>
+                <p>我想早早睡觉</p>
+                <p>早早见到我的宝宝</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
