--- a/index.html
+++ b/index.html
@@ -295,9 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天好困好累</p>
-                <p>我想早早睡觉</p>
-                <p>早早见到我的宝宝</p>
+                <p>最近赵瑾的妈妈总是喊我去家里吃饭</p>
+                <p>既然要上门</p>
+                <p>肯定要带点礼物</p>
+                <p>别的还没想好</p>
+                <p>米糕肯定要带两个</p>
+                <p>嘿嘿</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -323,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
