--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>最近赵瑾的妈妈总是喊我去家里吃饭</p>
-                <p>既然要上门</p>
-                <p>肯定要带点礼物</p>
-                <p>别的还没想好</p>
-                <p>米糕肯定要带两个</p>
-                <p>嘿嘿</p>
+                <p>这两天一到晚上</p>
+                <p>胃就有些不舒服</p>
+                <p>应该是胃吧那个位置</p>
+                <p>得吃点焖面</p>
+                <p>沾串</p>
+                <p>麻辣拌</p>
+                <p>。。。</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
