--- a/index.html
+++ b/index.html
@@ -295,13 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这两天一到晚上</p>
-                <p>胃就有些不舒服</p>
-                <p>应该是胃吧那个位置</p>
-                <p>得吃点焖面</p>
-                <p>沾串</p>
-                <p>麻辣拌</p>
-                <p>。。。</p>
+                <p>有人偷懒了两天</p>
+                <p>一天到晚就看小说</p>
+                <p>也不找我了</p>
+                <p>不开心</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
