--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>又又又不更新</p>
-                <p>第四天了</p>
-                <p>我都怀疑我的更新有没有被看了</p>
-                <p>某人不会都忘记了吧</p>
+                <p>时间</p>
+                <p>一眨眼就过去了好久</p>
+                <p>越来越快</p>
+                <p>可我还是记得每一天都想你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
