--- a/index.html
+++ b/index.html
@@ -295,10 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>时间</p>
-                <p>一眨眼就过去了好久</p>
-                <p>越来越快</p>
-                <p>可我还是记得每一天都想你</p>
+                <p>今天早上赖床</p>
+                <p>中午吃的萝卜炖牛肉有点没味道</p>
+                <p>下午打了一会游戏</p>
+                <p>练了会字</p>
+                <p>傍晚爬山了</p>
+                <p>晚上是下午一样</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
