--- a/index.html
+++ b/index.html
@@ -295,12 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天早上赖床</p>
-                <p>中午吃的萝卜炖牛肉有点没味道</p>
-                <p>下午打了一会游戏</p>
-                <p>练了会字</p>
-                <p>傍晚爬山了</p>
-                <p>晚上是下午一样</p>
+                <p>今天早上早起了</p>
+                <p>中午在舅舅家吃饭</p>
+                <p>晚上和舅妈妹妹妈妈吃鱼</p>
+                <p>然后回家练字</p>
+                <p>重新买了一双鞋子</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
