--- a/index.html
+++ b/index.html
@@ -295,11 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天早上早起了</p>
-                <p>中午在舅舅家吃饭</p>
-                <p>晚上和舅妈妹妹妈妈吃鱼</p>
-                <p>然后回家练字</p>
-                <p>重新买了一双鞋子</p>
+                <p>我们明天视频吧</p>
+                <p>这几天都没怎么聊天视频</p>
+                <p>怎么会这样呢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
