--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我们明天视频吧</p>
-                <p>这几天都没怎么聊天视频</p>
-                <p>怎么会这样呢</p>
+                <p>今天是情人节</p>
+                <p>但今天我们谁也没有说这三个字</p>
+                <p>明年我们要一起过</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -323,6 +323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
