--- a/index.html
+++ b/index.html
@@ -295,9 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天是情人节</p>
-                <p>但今天我们谁也没有说这三个字</p>
-                <p>明年我们要一起过</p>
+                <p>今年的年味感觉淡了好多</p>
+                <p>像是平常的一天</p>
+                <p>没有什么特别的</p>
+                <p>明年或许会有些不同吧</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经在一起了：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -323,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
